--- a/back_end/package.json
+++ b/back_end/package.json
@@ -4,15 +4,24 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev -r --respawn --transpileOnly --ignore-watch node_modules src/server.ts"
+    "dev": "ts-node-dev -r --respawn --transpileOnly --ignore-watch node_modules src/server.ts",
+    "test": "jest"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.4.0",
+    "@types/node": "^17.0.14",
+    "@typescript-eslint/eslint-plugin": "^5.10.2",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "jest": "^27.4.7",
+    "ts-jest": "^27.1.3",
     "ts-node-dev": "^1.1.8",
     "tsconfig-paths": "^3.12.0",
     "typescript": "^4.5.5"
   },
   "dependencies": {
+    "@types/mocha": "^9.1.0",
     "express": "^4.17.2"
   }
 }
