--- a/back_end/tsconfig.json
+++ b/back_end/tsconfig.json
@@ -1,26 +1,31 @@
 {
   "compilerOptions": {
-    "target": "es2016",
-    "lib": ["es6"],
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
-    "module": "commonjs",
-    "rootDir": "./src",
+    "target": "es2017",                          
+    "module": "commonjs",                     
+    "lib": ["es6"],                             
+    "allowJs": true,                       
+    "outDir": "./dist",                        
+    "rootDir": "./src",                       
+    "removeComments": true,                
     "typeRoots": [
-      "./node_module/@types",
+      "./node_modules/@types",
       "./src/@types"
-    ],
+    ],                          
+    "esModuleInterop": true,                  
     "resolveJsonModule": true,
-    "outDir": "./dist",
-    "removeComments": true,
-    "esModuleInterop": true,
+    "experimentalDecorators": true,        
+    "emitDecoratorMetadata": true,         
+    "skipLibCheck": true,                     
     "forceConsistentCasingInFileNames": true,
-    "skipLibCheck": true,
     "baseUrl": ".",
     "paths": {
       "@controllers/*": ["./src/controllers/*"],
       "@models/*": ["./src/models/*"],
-      "@service/*": ["./src/service/*"],
-    },
-  }
+      "@views/*": ["./src/views/*"],
+      "@config/*": ["./src/config/*"]
+    }
+  },
+  "include": [
+    "src/**/*"
+  ]
 }
