--- a/back_end/package.json
+++ b/back_end/package.json
@@ -24,6 +24,7 @@
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "jest": "^27.4.7",
+    "joi": "^17.6.0",
     "ts-jest": "^27.1.3",
     "ts-node-dev": "^1.1.8",
     "tsconfig-paths": "^3.12.0",
