--- a/back_end/package.json
+++ b/back_end/package.json
@@ -8,6 +8,7 @@
     "start": "node dist/server.js",
     "typeorm": "ts-node-dev node_modules/.bin/typeorm",
     "dev": "ts-node-dev --respawn --ignore-watch node_modules src/server.ts",
+    "build:db": "ts-node ./src/tests/mocks/createDBScript.ts",
     "test": "jest"
   },
   "devDependencies": {
@@ -30,7 +31,6 @@
   },
   "dependencies": {
     "@types/mocha": "^9.1.0",
-    "eslint-config-trybe-backend": "^1.0.4",
     "express": "^4.17.2",
     "mysql2": "^2.3.3",
     "reflect-metadata": "^0.1.13",
