build: script secure leak fix

--- a/back_end/package.json
+++ b/back_end/package.json
@@ -8,8 +8,8 @@
     "start": "node dist/server.js",
     "typeorm": "ts-node-dev node_modules/.bin/typeorm",
     "dev": "ts-node-dev --respawn --ignore-watch node_modules src/server.ts",
-    "build:db": "ts-node ./src/tests/mocks/createDBScript.ts",
-    "test": "jest"
+    "build:db": "ts-node ./src/tests/mocks/createDBScript.ts && chmod +x ./mysqlQuery.sh",
+    "test": "./mysqlQuery.sh && jest"
   },
   "devDependencies": {
     "@babel/cli": "^7.17.0",
